--- a/style.css
+++ b/style.css
@@ -2243,6 +2243,9 @@ hr {
     top: -3px;
     z-index: 9;
   }
+  #nv-primary-navigation .neve-mega-menu .sub-menu li a {
+    white-space: normal;
+  }
 
   #nv-primary-navigation .neve-mega-menu > .caret-wrap {
     display: none;
@@ -2252,7 +2255,7 @@ hr {
   #nv-primary-navigation .neve-mega-menu:focus > .sub-menu,
   #nv-primary-navigation .neve-mega-menu:focus-within > .sub-menu {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     left: 50%;
     transform: translateX(-50%);
     padding: 20px;
